--- a/assets/CSS/login-alumno.css
+++ b/assets/CSS/login-alumno.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px;
     top:auto;
+    font-family:'Sigmar One', cursive;
 }
 
 body {
@@ -16,11 +17,11 @@ body {
 
 input[type="password"], input[type="text"] {
     background: linear-gradient(top, #d6d7d7, #dee0e0);
-    border: 1px solid #a1a3a3;
-    border-radius: 10px;
+    border: 1px solid #7d8080;
+    border-radius: 20px;
     box-shadow: 0 1px #fff;
     box-sizing: border-box;
-    color: #696969;
+    color: #474343;
     transition: box-shadow 0.3s;
 }
 
@@ -31,44 +32,3 @@ input[type="password"]:focus, input[type="text"]:focus {
 }
 
 
-.forgot:hover { color: #3b3b3b }
-input[type="submit"] {
-    width:240px;
-    height:35px;
-    display:block;
-    font-family:Arial, "Helvetica", sans-serif;
-    font-size:25px;
-    font-weight:bold;
-    color:#fff;
-    text-decoration:none;
-    text-transform:uppercase;
-    text-align:center;
-    text-shadow:1px 1px 0px #37a69b;
-    padding-top:6px;
-    margin: 29px 0 0 29px;
-    position:relative;
-    cursor:pointer;
-    border: none;  
-    background-color: #37a69b;
-    background-image: linear-gradient(top,#3db0a6,#3111);
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius:5px;
-    box-shadow: inset 0px 1px 0px #2ab7ec, 0px 5px 0px 0px #497a78, 0px 10px 5px #999;
-}
-
-.shadow {
-    background: #000;
-    border-radius: 12px 12px 4px 4px;
-    box-shadow: 0 0 20px 10px #000;
-    height: 12px;
-    margin: 30px auto;
-    opacity: 0.2;
-    width: 270px;
-}
-
-input[type="submit"]:active {
-    top:3px;
-    box-shadow: inset 0px 1px 0px #2ab7ec, 0px 2px 0px 0px #31524d, 0px 5px 3px #999;
-}
