--- a/assets/CSS/login-alumno.css
+++ b/assets/CSS/login-alumno.css
@@ -15,7 +15,7 @@ body {
     width: 240px;
 }
 
-input[type="password"], input[type="text"] {
+input[type="password"], input[type="text"], input[type="email"] {
     background: linear-gradient(top, #d6d7d7, #dee0e0);
     border: 1px solid #7d8080;
     border-radius: 20px;
@@ -26,7 +26,7 @@ input[type="password"], input[type="text"] {
 }
 
 
-input[type="password"]:focus, input[type="text"]:focus {
+input[type="password"]:focus, input[type="text"]:focus,input[type="email"]:focus {
     box-shadow: 0 0 4px 1px rgba(55, 166, 155, 0.3);
     outline: 0;
 }
