--- a/assets/CSS/rank.css
+++ b/assets/CSS/rank.css
@@ -7,8 +7,8 @@
     grid-gap: 10px;
     grid-template-areas:
       "a a b b c c"
-      "a a b b c c"
-      "a a b b c c";
+      "d d e e f f"
+      "g g h h i i";
   }
   .item1 {
     grid-area: a;
@@ -18,6 +18,21 @@
   }
   .item3{
     grid-area: c;
+  }
+  .item4{
+    grid-area: d;
+  }
+  .item5{
+    grid-area: e;
+  }
+  .item6{
+    grid-area: f;
+  }
+  .item7{
+    grid-area: g;
+  }
+  .item8{
+    grid-area: h;
   }
 
 .body-card {
@@ -63,12 +78,12 @@
   }
   .card-text p {
     color: grey;
-    font-size:15px;
+    font-size:22px;
     font-weight: 300;
   }
   .card-text h2 {
     margin-top:0px;
-    font-size:11px;
+    font-size:15px;
   }
   .card-stats {
     grid-area: stats; 
